<resources>
    <string name="app_name">SomeRadio</string>
    <string name="default_status">Radio off</string>
    <string name="order">Order!</string>
    <string name="track_order">Music order</string>
    <string name="password">Password</string>
    <string name="admin_menu" translatable="false">Admin Menu</string>
    <string name="next_track">Next track</string>
    <string name="prev_track">Previous track</string>
    <string name="bitrate">Bitrate</string>
    <string name="bitrate_choose">Choose bitrate</string>
    <string name="copy_link_to_clipboard">Copy stream link</string>
    <string name="link_was_copied">Stream link was copied</string>
    <string name="unable_to_connect_to_server">Unable to connect to server</string>
    <string name="action_settings">Settings</string>
    <string-array name="bitrate_names" translatable="false">
        <item>64 kbps</item>
        <item>96 kbps</item>
        <item>128 kbps</item>
    </string-array>
    <string-array name="lang_names" translatable="false">
        <item>Default</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="nothing_selected">Nothing selected</string>
    <string name="done">"Done: "</string>
    <string name="connecting">Connecting…</string>
    <string name="buffering">Buffering…</string>
    <string name="play_and_stop">Play button</string>
    <string name="close_notification" translatable="false">Close notification</string>
    <string name="cant_play_the_stream">Can\'t play the stream</string>
    <string name="background">Background</string>
    <string name="auto_reconnect">Auto-reconnect</string>
    <string name="set_background">Set Background</string>
    <string name="restore_background">Restore Background</string>
    <string name="hint_search">Search</string>
    <string name="on_back_pressed">Press once again to exit!</string>
    <string name="lang_title">Language</string>
    <string name="waiting_for_internet">Waiting for internet connection…</string>
    <string name="check_internet_connection">Check your Internet connection</string>
    <string name="name_copied">Title copied</string>
    <string name="order_freeze_msg_one">"Wait "</string>
    <string name="order_freeze_msg_two">" sec until next order"</string>
    <string name="zero" translatable="false">0,00</string>
    <string name="radio_image">Radio image</string>
    <string name="send_email">Send email…</string>
    <string name="no_email_client_installed">There are no email clients installed.</string>
    <string name="contact_the_developer">Contact the developer</string>
    <string name="ask_update_rating">Do you want to update the rating?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="background_restored">Background restored</string>
    <string name="background_changed">Background changed</string>
    <string name="wrong_value">Wrong value</string>
    <string name="min_buffer">Min buffer = 1000 millis</string>
    <string name="max_buffer">Max buffer = 60000 millis</string>
    <string name="server_is_off">SomeRadio server is off</string>
    <string name="buffer_size">Buffer Size</string>
    <string name="double_click_to_reconnect">Double click to reconnect</string>
    <string name="on_headset">On headset</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="settings_will_be_restored">All settings will be restored!</string>
    <string name="warning">WARNING!</string>
    <string name="restore_settings">Restore settings</string>
    <string name="unavailable_below_5_0">Unavailable on Android below 5.0</string>
    <string name="about">About</string>
    <string name="special_thanks" translatable="false">Special thanks:</string>
    <string name="main_settings">Main Settings</string>
    <string name="choose_language">Choose language</string>
    <string name="telegram_bot" translatable="false">Telegram Bot</string>
    <string name="later">Later</string>
    <string name="please_wait">Please, wait…</string>
    <string name="programming" translatable="false">"Programming: "</string>
    <string name="design" translatable="false">"Design: "</string>
    <string name="openGP" translatable="false">Google Play</string>
    <string name="upload_your_song">Upload your song</string>
    <string name="next">Next</string>
    <string name="you_accepting_license_agreement">You accepting license agreement</string>
    <string name="close">close</string>
    <string name="file_uploaded">File uploaded!</string>
    <string name="uploading">Uploading…</string>
    <string name="uploaded_procents">% uploaded…</string>
    <string name="select_music">Select music</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="uploading_error">Uploading file error:</string>
    <string name="wrong_file">File is wrong. Please choose another</string>
    <string name="select_file">Select file</string>
</resources>