<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/main_settings">
        <ListPreference
            android:defaultValue="@string/default_lang"
            android:dialogTitle="@string/choose_language"
            android:entries="@array/lang_names"
            android:entryValues="@array/lang_values"
            android:key="lang"
            android:title="@string/lang_title" />
        <ListPreference
            android:defaultValue="@string/link_128"
            android:dialogTitle="@string/bitrate_choose"
            android:entries="@array/bitrate_names"
            android:entryValues="@array/bitrate_values"
            android:key="stream_link"
            android:title="@string/bitrate" />
        <EditTextPreference
            android:defaultValue="@string/default_buffer"
            android:inputType="number"
            android:key="buffer_size"
            android:singleLine="true"
            android:title="@string/buffer_size" />
        <SwitchPreference
            android:defaultValue="@string/default_autoreconnect"
            android:key="reconnect"
            android:title="@string/auto_reconnect" />
        <SwitchPreference
            android:defaultValue="@string/default_headset_reconnect"
            android:key="double_click"
            android:summary="@string/on_headset"
            android:title="@string/double_click_to_reconnect" />
        <Preference
            android:key="setBackground"
            android:title="@string/set_background" />
        <Preference
            android:key="restoreBackground"
            android:title="@string/restore_background" />
        <Preference
            android:key="restore_settings"
            android:title="@string/restore_settings" />
    </PreferenceScreen>
    <Preference
        android:key="copy_link_to_clipboard"
        android:title="@string/copy_link_to_clipboard" />
    <Preference
        android:key="bugReport"
        android:summary="email"
        android:title="@string/contact_the_developer" />
    <Preference
        android:key="check_for_updates"
        android:title="@string/check_for_updates" />
    <Preference
        android:icon="@drawable/ic_info_24dp"
        android:key="info"
        android:title="@string/about" />


</PreferenceScreen>