<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/copy_link_to_clipboard"
        android:orderInCategory="1"
        android:title="@string/copy_link_to_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/telegram_bot"
        android:orderInCategory="2"
        android:title="@string/telegram_bot"
        app:showAsAction="never" />
    <item
        android:id="@+id/admin_menu"
        android:orderInCategory="3"
        android:title="AdminMenu"
        app:showAsAction="never" />
</menu>