<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background">

    <ImageButton
        android:id="@+id/widget_status_bar_play"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@null"
        android:contentDescription="@string/play_and_stop"
        android:padding="12dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_play_circle_outline_24px" />

    <TextView
        android:id="@+id/widget_radio_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/widget_status_bar_play"
        android:layout_toRightOf="@+id/widget_status_bar_play"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/widget_status_bar_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/default_status"
        android:textColor="@color/colorStick"
        android:textSize="16dp"
        tools:ignore="SpUsage"
        android:layout_below="@+id/widget_radio_head"
        android:layout_toRightOf="@+id/widget_status_bar_play"
        android:layout_toEndOf="@+id/widget_status_bar_play" />

</RelativeLayout>