<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.guwenk.smuradio.AdminActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aa_backgroundImage"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/background" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:background="@drawable/rectangle_orange_white"
        android:ems="10"
        android:padding="2dp"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:hint="@string/password"
        android:id="@+id/etPass" />

    <Button
        android:text="@string/prev_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPrev"
        android:layout_below="@+id/btnNext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/next_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_below="@+id/etPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:id="@+id/admin_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_orange_white"
        android:padding="2dp"
        android:layout_below="@+id/admin_tv"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/admin_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vote"
        android:layout_below="@+id/admin_rating"
        android:layout_alignLeft="@+id/admin_rating"
        android:layout_alignStart="@+id/admin_rating" />

    <TextView
        android:id="@+id/admin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_et"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_orange_white"
        android:ems="10"
        android:padding="2dp"
        android:text="Rate"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/admin_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPrev"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_orange_white"
        android:ems="10"
        android:padding="2dp"
        android:textSize="24sp"
        android:hint="Name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/admin_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/admin_vote"
        android:layout_alignEnd="@+id/admin_rating"
        android:layout_alignRight="@+id/admin_rating"
        android:text="Check" />

</RelativeLayout>
